feat: servicio de factua agregado y correcciones del CORS