@@ -20,6 +20,7 @@ import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
 import java.util.Arrays;
+import java.util.List;
 
 @Configuration
 @EnableWebSecurity
@@ -48,13 +49,24 @@ public class SecurityConfig {
         return authBuilder.build();
     }
 
-    // Configuración CORS Global
+    // Configuración CORS Global (Robustez para desarrollo)
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
-        configuration.setAllowedOrigins(Arrays.asList("http://localhost:4200")); 
-        configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS"));
-        configuration.setAllowedHeaders(Arrays.asList("Authorization", "Content-Type", "Access-Control-Allow-Origin"));
+        
+        // Permitir el origen específico de tu frontend Angular
+        configuration.setAllowedOrigins(List.of("http://localhost:4200")); 
+        
+        // Métodos permitidos
+        configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS", "HEAD", "PATCH"));
+        
+        // Cabeceras permitidas (incluyendo Authorization y Content-Type)
+        configuration.setAllowedHeaders(Arrays.asList("Authorization", "Content-Type", "Access-Control-Allow-Origin", "X-Requested-With", "Accept", "Origin"));
+        
+        // Exponer cabeceras si fuera necesario (opcional pero útil)
+        configuration.setExposedHeaders(List.of("Authorization"));
+
+        // Permitir credenciales (cookies, headers de autenticación)
         configuration.setAllowCredentials(true);
 
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
@@ -66,7 +78,7 @@ public class SecurityConfig {
     @Bean
     public SecurityFilterChain filterChain(HttpSecurity http) throws Exception {
         http
-            .cors(Customizer.withDefaults())
+            .cors(Customizer.withDefaults()) // Usa el bean corsConfigurationSource definido arriba
             .csrf(csrf -> csrf.disable())
             .authorizeHttpRequests(auth -> auth
                 
@@ -74,15 +86,13 @@ public class SecurityConfig {
                 .requestMatchers("/api/auth/**").permitAll()
                 .requestMatchers(HttpMethod.OPTIONS, "/**").permitAll()
 
-                // 2. ¡CRUCIAL! Permitir ver la página de errores interna de Spring
-                // Esto desbloqueará el 403 falso y mostrará el error real (404 o 500)
+                // 2. Permitir ver la página de errores interna de Spring
                 .requestMatchers("/error").permitAll()
 
-                // 3. PERFIL DE USUARIO: Accesible para cualquier usuario logueado
+                // 3. PERFIL DE USUARIO
                 .requestMatchers("/api/usuarios/perfil").authenticated()
 
-                // 4. REGLAS DE ROLES (Usamos hasAuthority para coincidencia EXACTA con ROLE_ADMIN)
-                
+                // 4. REGLAS DE ROLES
                 // Gestión de Usuarios y Odontólogos -> SOLO ADMIN
                 .requestMatchers("/api/usuarios/**").hasAuthority("ROLE_ADMIN")
                 .requestMatchers("/api/odontologos/**").hasAuthority("ROLE_ADMIN")
@@ -94,7 +104,7 @@ public class SecurityConfig {
                 // Citas -> Acceso general para roles internos
                 .requestMatchers("/api/citas/**").hasAnyAuthority("ROLE_ADMIN", "ROLE_RECEPCIONISTA", "ROLE_ODONTOLOGO", "ROLE_PACIENTE")
                 
-                // Solo Paciente (para ver sus propias cosas específicas)
+                // Solo Paciente
                 .requestMatchers("/api/citas/paciente/**").hasAuthority("ROLE_PACIENTE")
 
                 // Todo lo demás requiere estar logueado
